# pocket-reform

./: .gitignore  README.md  install-fw-dependencies.sh
attic/pocket-reform-keyboard/: pocket-reform-keyboard-mcu.sch  pocket-reform-keyboard.kicad_pcb  pocket-reform-keyboard.pro
case-plate-pcbs/: pref-display-back-d5-gold.kicad_pcb  pref-display-back-d5.kicad_pcb  pref-display-back-d7-gold.kicad_pcb  pref-display-front-d7.kicad_pcb  pref-display-front.kicad_pcb  pref-keyboard-back-d1-fr4.kicad_pcb  pref-keyboard-back-d1-fr4.kicad_prl  pref-keyboard-bezel-d6.kicad_pcb  pref-keyboard-bezel.kicad_pcb  pref-side-panel-empty.kicad_pcb  pref-side-panel-headphones-d8.kicad_pcb  pref-side-panel-ports-d8.kicad_pcb  pref-side-panel-ports.kicad_pcb
case-plate-pcbs/freecad/: pref-keyboard-bezel-freecad-recreate-Cut.step  pref-keyboard-bezel-freecad-recreate.FCStd  pref-keyboard-bezel-freecad-recreate.FCStd1
pocket-reform-case-20231121/: PREF-bottom_enclosure_2023.09.06.step  PREF-top_enclosure_2023.11.21.step
pocket-reform-charger/: pocket-reform-charger.kicad_pcb  pocket-reform-charger.kicad_prl  pocket-reform-charger.kicad_pro  pocket-reform-charger.kicad_sch  pocket-reform-charger.xlsx
pocket-reform-charger/3d-models/: 21-0139I_T2444-4_MXM.step  User Library-MWSA0518S.STEP
pocket-reform-charger/lib/: pocket-reform-charger.bak  pocket-reform-charger.kicad_sym
pocket-reform-headphones/: pocket-reform-headphones.kicad_pcb  pocket-reform-headphones.kicad_prl  pocket-reform-headphones.kicad_pro  pocket-reform-headphones.kicad_sch  pocket-reform-headphones.xlsx
pocket-reform-headphones/3d-models/: SR42W001.stp  User Library-SK-3296S-01-L3-1.STEP
pocket-reform-headphones/footprints/: SR42W001.kicad_mod  pref-headset-badge.kicad_mod
pocket-reform-headphones/lib/: SR42W001.kicad_sym
pocket-reform-keyboard/: pocket-reform-keyboard-cache.lib  pocket-reform-keyboard-mcu.sch  pocket-reform-keyboard.kicad_pcb  pocket-reform-keyboard.pro  pocket-reform-keyboard.sch
pocket-reform-keyboard-fw/pocket-hid/: CMakeLists.txt  build.sh  flash.sh
pocket-reform-keyboard-fw/pocket-hid/bitmap-font/: lcdfont.c  reform2kbdbitmapfont.xcf
pocket-reform-keyboard-fw/pocket-hid/src/: font.c  keyboard.h  main.c  matrix.h  menu.c  menu.h  oled.c  oled.h  remote.c  remote.h  tusb_config.h  usb_descriptors.c  ws2812.pio.h
pocket-reform-keyboard-kailh-ortho/: pocket-reform-kbd-mcu.kicad_sch  pocket-reform-kbd-mcu.sch  pocket-reform-keyboard-kailh-ortho-cache.lib  pocket-reform-keyboard-kailh-ortho.kicad_pcb  pocket-reform-keyboard-kailh-ortho.kicad_pro  pocket-reform-keyboard-kailh-ortho.kicad_sch  pocket-reform-keyboard-kailh-ortho.sch
pocket-reform-keyboard-lettering/: pocket-reform-kbd-lettering-prod-v3-power30.plf
pocket-reform-motherboard/: pocket-reform-motherboard-cache.lib  pocket-reform-motherboard-r2-bom.xlsx  pocket-reform-motherboard.kicad_pcb  pocket-reform-motherboard.kicad_pro  pocket-reform-motherboard.kicad_sch  pocket-reform-motherboard.sch
pocket-reform-sysctl-fw/: CMakeLists.txt  build.sh  flash.sh  fusb302b.h  pd.h  pdb_msg.h  sysctl.c
pocket-reform-trackball-cup/: pocket-reform-trackball-cup-plate31.stl  pocket-reform-trackball-cup.scad
pref-battholder-openscad/: pref-assembly-20240112-BattHolder1-reexport.stl  pref-battholder-countersink-prod-a.stl  pref-battholder-countersink-prod-b.stl  pref-battholder-countersink.scad
pref-kbd-test/: pref-kbd-test.c
(+84 files in other folders)
